--- a/PycharmProjects/pythonProject/HB_HSCMS_BOT/.gitignore
+++ b/PycharmProjects/pythonProject/HB_HSCMS_BOT/.gitignore
@@ -1,17 +1,6 @@
 /venv/
-/database/database.db
-.idea/dictionaries
-.idea/HB_HSCMS_BOT.iml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/inspectionProfiles/Project_Default.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/toolchains.xml
+/HB_HSCMS_BOT/database/database.db
 /.idea
 /__pycache__
-/handlers/__pycache__
-/handlers/__pycache__
-handlers/__pycache__/__init__.cpython-311.pyc
-/handlers/__pycache__
-handlers/__init__.py
 *.pyc
+database/database.db
